# cleanup

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  cleanup.cpp  fstask.cpp  fstask.hpp  trash.cpp  trash.hpp
CMake/: unistall.cmake
cleanup/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Config.h  Error.h  FileSystemBoost.cpp  FileSystemBoost.h  RemoveFile.cpp  RemoveFile.h  Reporter.cpp  Reporter.h  SearchPaths.cpp  SearchPaths.h  Timer.h  main.cpp
cleanup/ext/: mib.h
src/: CMakeLists.txt  cleanup.cpp  config.hpp  fstask.cpp  fstask.hpp  trash.cpp  trash.hpp
